sites/all/themes/econ/spbgu/app/css/main.css
/* ... */
.notice-widget .owl-page {
  margin: 0.625rem;
}
.advert__date {
  font-size: 0.75rem;
  letter-spacing: 0.03125rem;
}
.news-widget {
  font-family: Roboto, Helvetica, Arial, Sans-serif;
}
.news-widget__image {
  background-size: cover;
  background-position: 50% 50%;
  height: 12.5rem;
  margin-bottom: 0.625rem;
  display: none;
}
.page__content .news-widget__image {
  display: block;
}
.news-widget__item {
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1rem;
  padding: 0.9375rem 0.9375rem 0.625rem;
  display: block;
  color: #2d2d2d;
  transition: background-color 0.3s;
  border-bottom: 1px solid #e3e3e3;
}
.news-widget__item:hover {
  color: #2d2d2d;
  background: #cfcfcf;
}
.page__content .news-widget__item {
  font-size: 1.125rem;
  line-height: 1.3;
  border-bottom: none;
  margin-bottom: 0.625rem;
  padding-left: 1.25rem;
}
@media only screen and (max-width: 991px) {
  .news-widget__item {
    width: 33.333333%;
    display: block;
    float: left;
    border-bottom: none;
  }
  .page__content .news-widget__item {
    width: 100%;
  }
}
@media only screen and (max-width: 767px) {
  .news-widget__item {
    width: 50%;
  }
  .page__content .news-widget__item {
    width: 100%;
  }
}
@media only screen and (max-width: 400px) {
  .news-widget__item {
    width: 100%;
  }
}
.news-widget__meta {
  margin-top: 0.3125rem;
  font-size: 0.8125rem;
  font-weight: 300;
}
.page__content .news-widget__meta {
  padding-bottom: 0.625rem;
  margin-top: 0.625rem;
}
@media only screen and (max-width: 767px) {
  .page__content .news-widget__btn {
    margin: 0 -0.9375rem;
  }
}
.news-widget .ps-scrollbar-y-rail {
  top: 0 !important;
  right: 0.3125rem;
}
.news-widget .ps-scrollbar-y-rail > .ps-scrollbar-y {
  background: #5d5d5d;
  opacity: 0.6;
}
.news-widget .ps-scrollbar-x-rail {
  bottom: 3.9375rem;
  left: 0 !important;
}
.news-widget .ps-scrollbar-x-rail > .ps-scrollbar-x {
  background: #5d5d5d;
  opacity: 0.6;
}
.intro {
  position: relative;
  color: #fff;
}
@media only screen and (min-width: 991px) {
  .intro {
    height: 615px;
    overflow: hidden;
  }
}
@media only screen and (max-width: 991px) {
  .intro .ps-scrollbar-y-rail {
    display: none !important;
  }
}
.intro__banner {
  width: 100%;
  display: block;
}
@media only screen and (max-width: 400px) {
  .intro__banner {
    padding-bottom: 0.9375rem;
  }
}
.intro__banner--orange {
  transition: background-color 0.3s;
  background: #f57723;
}
.intro__banner--blue {
  transition: background-color 0.3s;
  background: #1973bc;
}
.intro a.intro__banner--orange:hover {
  background: #e55d2a;
}
.intro a.intro__banner--blue:hover {
  background: #09518d;
}
.intro a {
  color: #fff;
  transition: background-color 0.3s;
}
.intro__header {
  padding: 1.875rem 1.875rem 0.9375rem;
  font-size: 2.25rem;
  line-height: 2.6875rem;
}
@media only screen and (max-width: 400px) {
  .intro__header {
    padding: 0.9375rem;
    font-size: 1.625rem;
    line-height: 2rem;
  }
}
.intro__text {
  padding: 0 1.875rem 1.875rem;
  font-size: 1.3125rem;
  font-family: Roboto, Helvetica, Arial, Sans-serif;
}
@media only screen and (max-width: 400px) {
  .intro__text {
    padding: 0 0.9375rem 0.9375rem;
    line-height: 1.25rem;
    font-size: 1.0625rem;
  }
}
.intro__image {
  width: 100%;
  padding: 0rem 0 0;
}
.intro__slider {
  padding: 0;
}
.intro__slide {
  display: block;
}
.intro__econ {
  padding-bottom: 1.25rem;
}
.intro__econ__links {
  display: table;
  width: 100%;
  width: calc(100% + 1px);
}
.intro__econ__link {
  width: 1%;
  background: #454545;
  display: table-cell;
  text-align: center;
  vertical-align: middle;
  height: 3.75rem;
  color: #fff;
  font-family: Roboto, Helvetica, Arial, Sans-serif;
  font-size: 0.8125rem;
}
.intro__econ__link:hover {
  background: #1973bc;
}
@media only screen and (max-width: 400px) {
  .intro__econ__link {
    padding-top: 0.625rem;
    display: block;
    width: auto;
  }
}
.intro__econ__features {
  padding: 1.875rem 1.875rem 2.5rem;
  width: 100%;
}
@media only screen and (max-width: 600px) {
  .intro__econ__features {
    display: none;
  }
}
.intro__econ__features .intro__header,
.intro__econ__features .intro__text {
  padding: 0;
}
@media only screen and (max-width: 600px) {
  .intro__econ__feature {
    width: 100%;
    margin-bottom: 1.5625rem;
  }
  .intro__econ__feature:last-child {
    margin-bottom: 0;
  }
}
@media only screen and (min-width: 767px) and (max-width: 991px) {
  .page {
    padding: 0 6.25rem;
  }
}
.page__main-image {
  padding-bottom: 1.875rem;
}
.page__content {
  font-family: Roboto, Helvetica, Arial, Sans-serif;
  font-size: 0.9375rem;
  padding: 0rem 6.25rem;
  min-height: 500px;
  padding-bottom: 3.75rem;
}
@media only screen and (max-width: 991px) {
  .page__content {
    padding: 0rem 0.9375rem;
  }
}
.page__content h1,
.page__content h2,
.page__content h3 {
  font-family: Lora, Helvetica, Arial, Serif;
  padding-bottom: 0.625rem;
}
.page__content .page__title,
.page__content h1 {
  font-size: 2.1875rem;
  line-height: 2.6875rem;
  padding-bottom: 1.25rem;
}
@media only screen and (max-width: 767px) {
  .page.person .page__content .page__title,
  .page.person .page__content h1 {
    margin-top: 0.9375rem;
  }
}
@media only screen and (max-width: 767px) {
  .page__content .page__title,
  .page__content h1 {
    font-size: 1.5rem;
    line-height: 1.875rem;
  }
}
.page__content h2,
.page__content h3 {
  font-size: 1.5rem;
  line-height: 1.5625rem;
  margin-bottom: 0.3125rem;
  margin-top: 1.25rem;
}
@media only screen and (max-width: 767px) {
  .page__content h2,
  .page__content h3 {
    font-size: 1.25rem;
    line-height: 1.375rem;
  }
}
.page__content p {
  padding-bottom: 0.9375rem;
}
.page__content p a {
  font-weight: 400;
  color: #1973bc;
}
.page__content p a:hover {
  color: #9b9b9b;
}
.page__content ul {
  margin-bottom: 0.9375rem;
}
.page__content ul li {
  padding-left: 1.25rem;
  padding-bottom: 0.625rem;
  position: relative;
}
/* ... */

